--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --side-bar-width: 20rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,4 +19,16 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer components {
+  .navigation {
+    @apply h-12 flex items-center rounded-md hover:bg-orange-200 hover:bg-opacity-20 text-lg;
+  }
+}
+
+.main {
+  width: calc(100% - var(--side-bar-width));
+  height: 100vh;
+  margin-left: auto;
 }
