--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,21 +3,35 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --white: #ffffff;
+  --black: #171717;
+  --primary-100: hsl(24, 75%, 90%);
+  --primary-500: hsl(24, 100%, 50%);
+  --primary-900: hsl(24, 75%, 25%);
+
+  --secondary-100: hsl(187, 50%, 95%);
+  --secondary-500: hsl(187, 70%, 60%);
+  --secondary-900: hsl(187, 50%, 25%);
+
+  --grey-100: hsl(0, 1%, 95%);
+  --grey-500: hsl(0, 1%, 40%);
+  --grey-900: hsl(0, 1%, 10%);
+
+  --divider: rgba(0, 0, 0, 0.12);
+
   --side-bar-width: 16rem;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #000000;
     --foreground: #ededed;
   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--grey-900);
+  background: var(--white);
   font-family: Arial, Helvetica, sans-serif;
 }
 
