--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,14 @@ body {
   .icon-sm {
     @apply w-4 h-4;
   }
+
+  .nav-link {
+    @apply py-2 px-4 border border-divider rounded-lg font-bold;
+  }
+
+  .nav-link-active {
+    @apply bg-grey-500 text-grey-100;
+  }
 }
 
 .main {
